# SoundForgeAmpSim

./: CMakeLists.txt  NO_LOCAL_TOOLS_BUILD.md  README.md  START_HERE.md
.github/workflows/: windows-release.yml
Presets/: FactoryPresets.json
SonicForgePro_NoLocalBuild/: START_HERE_NO_LOCAL_TOOLS.txt
SonicForgePro_NoLocalBuild/Presets/Factory/: factory_presets.json
SonicForgePro_NoLocalBuild/Source/: PluginEditor.cpp  PluginProcessor.h
SonicForgePro_NoLocalBuild/Source/DSP/: AmpEngine.cpp  AmpEngine.h  AmpModels.cpp  CabinetIR.h  Effects.cpp  NoiseGate.cpp  PresetManager.h
SonicForgePro_NoLocalBuild/Source/UI/: KnobLookAndFeel.cpp  KnobLookAndFeel.h
SonicForgePro_NoLocalBuild/packaging/: SonicForgeProAmpSim.iss
SonicForgePro_NoLocalBuild/scripts/: build_windows_release.bat  install_vst3_for_current_user.bat
Source/: AmpDSP.cpp  AmpDSP.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/DSP/: AmpModel.cpp  AmpModel.h  CabinetIR.cpp  CabinetModel.cpp  CabinetModel.h  NoiseGate.cpp  NoiseGate.h  ToneStack.cpp  ToneStack.h
docs/: MILESTONE_1.md  MILESTONE_2_3.md  ROADMAP.md
scripts/: README_BUILD_LOGS.md  build_windows_release.bat  build_windows_release_LOCAL_REQUIRES_CMAKE.bat  collect_release.ps1
